// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente GitexpertApp Debe de mostrar lista de categorias 1`] = `
<div>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</div>
`;

exports[`Pruebas al componente GitexpertApp Debe hacer match snapshot   1`] = `
<div>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
